--- a/3d.html
+++ b/3d.html
@@ -21,7 +21,7 @@
 
 		<div class="header"><a href = "index.html">   <span >Kaarthic P.</span></a><a target="_blank" class="link" href="https://github.com/KaarthicPulogarajah"><img style="float:right" class="logo" src="img/github2.png"></a><a target="_blank" class="link" href="https://www.linkedin.com/in/kaarthicp"><img style="float:right" class="logo" src="img/linkedin.png"></a><a target="_blank" class="link" href="pdf/Kaarthic_Resume.pdf"><img style="float:right" class="logo" src="img/adobe.png"></a><a href = "portfolio.html"><span style="float:right">Portfolio   </span></a></div>
 				
-		<p class = "titleP">3D Modelling</p>
+		<p id="modThree" class = "titleP">3D Modelling</p>
 		<!-- <p class = "padP"></p> -->
 		<div class = "boxP">
 		<!-- <div class="col"> -->
