--- a/windtunnel.html
+++ b/windtunnel.html
@@ -29,13 +29,20 @@
 	<p class="text">Design Report: <a target="_blank" style= "color:#0000EE;" href="pdf/1315-MH Wind Tunnel Prospectus.pdf"><u><i>Design and Force Analysis of a Wind Tunnel</i></u></a></p>
 	<p class="text">Upon completing the research, we decided to use load cells to measure lift and drag, a brushless motor from a RC aircraft to power the fan, a 7-segment display to show windspeed or forces, a differential pressure gauge to measure windspeed, and an Arduino Mega to control input from all the sensors.</p>
 
-	<img id= "forces" src="img/loadcell.jpg">
-	<img id= "winds" src="img/anemometer.png">
+	<div class="imgCenter">
+		<img id= "forces" src="img/loadcell.jpg">
+		<div class="flightAlign"></div>
+		<img id= "winds" src="img/anemometer.png">
+	</div>
 	<p class="text">The load cells (left) were selected to be able to measure forces on the scale of millinewtons. The differential pressure gauge (right) measured the difference in pressure between each tube. One tube would be placed into the wind, and the other perpendicular to the flow. Thus, the reading could then be converted to a wind speed using Bernoulli's equations.</p>
-	<img id= "winds2" src="img/wind tunnel2.jpg">
-	<img id= "winds3" src="img/wind tunnel3.jpg">
+	<div class="imgCenter">
+		<img id= "winds2" src="img/wind tunnel2.jpg">
+		<div class="flightAlign"></div>
+		<img id= "winds3" src="img/wind tunnel3.jpg">
+	</div>
 	<p class="text">The final product was a structure laser cut from MDF and construction paper, with ports to accomodate the sensors, the battery for the fan, and the Arduino. The acrylic access hatch allowed easy visiblity into the tunnel and allowed airfoils to be placed inside easily. Overall, the wind tunnel worked as expected and read forces accurately.</p>
 
+	</div>
 </main>
 <footer></footer>
 </body>
