removed border from images and added mirror effect
- sans serif font for text
- portfolio pics in index fixed
- overflow:hidden only on portfolio.html - need to test

--- a/index.html
+++ b/index.html
@@ -53,19 +53,22 @@
 					</div>
 
 					<h2>Portfolio Highlights</h2>
-					<div style="display: inline-block;">
-						<div class="cont">
-							<a href="windtunnel.html"><img class="portpics" src="img/wind tunnel2.jpg"></a>
-							<p class="cent">1315-MH Wind Tunnel</p>
-						</div>
-						<div class="cont">
-							<a target="_blank" href= https://github.com/KaarthicPulogarajah/Battleship><img class = "portpics" src="img/battleship.jpg"></a>
-							<p class="cent">Battleship</p>
-						</div>
-						<div class="cont">
-							<a href="planetsim.html"><img class = "portpics" src="img/planets.jpg"></a>
-							<p class="cent">Planets Simulation</p>
-						</div>
+					<!-- <div style="display: inline-block;"> -->
+					<div class="imgCenter">
+						<span class="conts">
+							<a href="windtunnel.html"><img class="portpicsx" src="img/wind tunnel2.jpg"></a>
+							<span class="cents">1315-MH Wind Tunnel</span>
+						</span>
+						<div class="flightAlign"></div>
+						<span class="conts">
+							<a target="_blank" href= https://github.com/KaarthicPulogarajah/Battleship><img class = "portpicsx" src="img/battleship.jpg"></a>
+							<span class="cents">Battleship</span>
+						</span>
+						<div class="flightAlign"></div>
+						<span class="conts">
+							<a href="planetsim.html"><img class = "portpicsx" src="img/planets.jpg"></a>
+							<span class="cents">Planets Simulation</span>
+						</span>
 					</div>
 
 				</div>
