--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="overflow-x: hidden;" >
 <head>
 	<title>Portfolio</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -57,7 +57,6 @@
 			
 		</span>
 		
-
 		<span id="hide_soft">
 			
 			<span class="cont">
