centred images in portfolio
- hide some images for mobile

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Kaarthic Pulogarajah</title>
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="keywords" content="Kaarthic Pulogarajah, Kaarthic Pulo">
 	<meta name="description" content="Here you will find find a collection of my projects and designs - some academic, and some just for fun">
 	<link rel="shortcut icon" href="img/icon4.png"/>
