--- a/portfolio.html
+++ b/portfolio.html
@@ -29,75 +29,102 @@
 	<div class = "boxP">
 
 		<span id="hide_eng">
-
-			<span class="cont">
-				<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
-				<p class="cent">1315-MH Wind Tunnel</p>
-			</span>
-
-			<span class="cont">
-				<a href="3d.html"><img class = "portpics" src="img/trophy1.png"></a>
-				<p class="cent">3D Modelling</p>
-			</span>
-			
-			<span class="cont">
-				<a href="fridge.html"><img class = "portpics" src="img/ice2.jpg"></a>
-				<p class="cent">Freezing and Cooling Technologies</p>
-			</span>
-
-			<span class="cont">
-				<a href="garbageRobot.html"><img class = "portpics" src="img/robotcover.jpg"></a>
-				<p class="cent">Garbage Collector and Sorter Robot</p>
-			</span>
-
-			<span class="cont"  style="margin-right:3%;">
-				<a href="traxxas.html"><img class = "portpics" src="img/traxxas.png"></a>
-				<p class="cent">Assistive Technology</p>
-			</span>
-			
+			<div class="imgCenter">
+				<span class="cont">
+					<a href="windtunnel.html"><img class = "portpics" src="img/wind tunnel2.jpg"></a>
+					<p class="cent">1315-MH Wind Tunnel</p>
+				</span>
+			</div>
+			<div class="imgCenter">
+				<span class="cont">
+					<a href="3d.html"><img class = "portpics" src="img/trophy1.png"></a>
+					<p class="cent">3D Modelling</p>
+				</span>
+			</div>
+			<div class="imgCenter">		
+				<span class="cont">
+					<a href="fridge.html"><img class = "portpics" src="img/ice2.jpg"></a>
+					<p class="cent">Freezing and Cooling Technologies</p>
+				</span>
+			</div>
+			<div class="imgCenter">
+				<span class="cont">
+					<a href="garbageRobot.html"><img class = "portpics" src="img/robotcover.jpg"></a>
+					<p class="cent">Garbage Collector and Sorter Robot</p>
+				</span>
+			</div>
+			<div class="imgCenter">
+				<span class="cont">
+					<a href="traxxas.html"><img class = "portpics" src="img/traxxas.png"></a>
+					<p class="cent">Assistive Technology</p>
+				</span>
+			</div>			
 		</span>
 		
 		<span id="hide_soft">
+			<div class="imgCenter">
+				<span class="cont">
+					<a target="_blank" href= https://github.com/KaarthicPulogarajah/Battleship><img class = "portpics" src="img/battleship.jpg"></a>
+					<p class="cent">Battleship</p>
+				</span>
+			</div>
+			<div class="imgCenter">	
+				<span class="cont">
+					<a href="planetsim.html"><img class = "portpics" src="img/planets.jpg"></a>
+					<p class="cent">Planets Simulation</p>
+				</span>
+			</div>
+			<div class="imgCenter">
+				<span class="cont">
+					<a target="_blank" href= https://github.com/KaarthicPulogarajah/VandermondeMatrix><img class = "portpics" src="img/vmatrix.png"></a>
+					<p class="cent">Vandermonde Matrix</p>
+				</span>
+			</div>
+			<div class="imgCenter">	
+				<span class="cont">
+					<a href="flightpath.html"><img class = "portpics" src="img/planepic.jpg"></a>
+					<p class="cent">Airplane Trajectory</p>
+				</span>
+			</div>
+			<div class="imgCenter">
+				<span class="cont">
+					<a target="_blank" href= https://github.com/KaarthicPulogarajah/Mastermind><img class = "portpics" src="img/mastermind.jpg"></a>
+					<p class="cent">Mastermind</p>
+				</span>
+			</div>
+			<div class="imgCenter">	
+				<span class="cont">
+					<a target="_blank" href= https://github.com/KaarthicPulogarajah/ConnectFour><img class = "portpics" src="img/connectfour.png"></a>
+					<p class="cent">Connect Four</p>
+				</span>
+			</div>
+			<div class="imgCenter">
+				<span class="cont">
+					<a target="_blank" href= https://github.com/KaarthicPulogarajah/MatrixInverse><img class = "portpics" src="img/matinv.png"></a>
+					<p class="cent">Matrix Inverse</p>
+				</span>
+			</div>
+			<div class="imgCenter">	
+				<span class="cont">
+					<a target="_blank" href= https://github.com/KaarthicPulogarajah/2048><img class = "portpics" src="img/2048.png"></a>
+					<p class="cent">2048</p>
+				</span>
+			</div>
 			
-			<span class="cont">
-				<a target="_blank" href= https://github.com/KaarthicPulogarajah/Battleship><img class = "portpics" src="img/battleship.jpg"></a>
-				<p class="cent">Battleship</p>
-			</span>
-			
-			<span class="cont">
-				<a href="planetsim.html"><img class = "portpics" src="img/planets.jpg"></a>
-				<p class="cent">Planets Simulation</p>
-			</span>
-		
-			<span class="cont">
-				<a target="_blank" href= https://github.com/KaarthicPulogarajah/VandermondeMatrix><img class = "portpics" src="img/vmatrix.png"></a>
-				<p class="cent">Vandermonde Matrix</p>
-			</span>
-			
-			<span class="cont">
-				<a href="flightpath.html"><img class = "portpics" src="img/planepic.jpg"></a>
-				<p class="cent">Airplane Trajectory</p>
-			</span>
-		
-			<span class="cont">
-				<a target="_blank" href= https://github.com/KaarthicPulogarajah/Mastermind><img class = "portpics" src="img/mastermind.jpg"></a>
-				<p class="cent">Mastermind</p>
-			</span>
-			
-			<span class="cont">
-				<a target="_blank" href= https://github.com/KaarthicPulogarajah/ConnectFour><img class = "portpics" src="img/connectfour.png"></a>
-				<p class="cent">Connect Four</p>
-			</span>
-
-			<span class="cont">
-				<a target="_blank" href= https://github.com/KaarthicPulogarajah/MatrixInverse><img class = "portpics" src="img/matinv.png"></a>
-				<p class="cent">Matrix Inverse</p>
-			</span>
-			
-			<span class="cont">
-				<a target="_blank" href= https://github.com/KaarthicPulogarajah/2048><img class = "portpics" src="img/2048.png"></a>
-				<p class="cent">2048</p>
-			</span>
+			<!-- <div style="visibility:hidden;">  -->
+				<!-- <span class="cont" id="portpad"> -->
+					<!-- <a target="_blank" href= https://github.com/KaarthicPulogarajah/2048><img class = "portpics" src="img/2048.png"></a> -->
+					<!-- <p class="cent">2048</p> -->
+				<!-- </span> -->
+				<!-- <span class="cont"> -->
+					<!-- <a target="_blank" href= https://github.com/KaarthicPulogarajah/2048><img class = "portpics" src="img/2048.png"></a> -->
+					<!-- <p class="cent">2048</p> -->
+				<!-- </span> -->
+				<!-- <span class="cont" id="portpad"> -->
+					<!-- <a target="_blank" href= https://github.com/KaarthicPulogarajah/2048><img class = "portpics" src="img/2048.png"></a> -->
+					<!-- <p class="cent">2048</p> -->
+				<!-- </span> -->
+			<!-- </div> -->
 			
 		</span>
 
